--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 				<section>
 					<h1>Radical Optimism</h1>
 					<h3>Reason-based Optimism About Everything</h3>
-					<p><small><a href="https://radicaloptimism.org/">https://radicaloptimism.org/</a></small></p>
-                                        <p><small><a href="mailto:averageradical@gmail.com">Kevin Grigorenko</a></small></p>
+					<p><small><a href="https://radicaloptimism.org/">https://radicaloptimism.org/</a> | <a href="mailto:averageradical@gmail.com">Kevin Grigorenko</a></small></small></p>
 				</section>
 
 				<section>
