--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 				<section>
 					<h1>Radical Optimism</h1>
 					<h3>Reason-based Optimism About Everything</h3>
-					<p><small><a href="https://radicaloptimism.org/">https://radicaloptimism.org/</a> | <a href="mailto:averageradical@gmail.com">Kevin Grigorenko</a></small></small></p>
+                                        <p>Presenation: <a href="http://averageradical.github.io/radicaloptimism/#/">http://averageradical.github.io/radicaloptimism/#/</a></p>
+                                        <p><a href="https://radicaloptimism.org/">https://radicaloptimism.org/</a></p>
+					<p><small><a href="mailto:averageradical@gmail.com">Kevin Grigorenko</a></small></p>
 				</section>
 
 				<section>
