--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>Radical Optimism Presentation</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -45,9 +45,8 @@
 				<section>
 					<h1>Radical Optimism</h1>
 					<h3>Reason-based Optimism About Everything</h3>
-                                        <p>Presenation: <a href="http://averageradical.github.io/radicaloptimism/#/">http://averageradical.github.io/radicaloptimism/#/</a></p>
                                         <p><a href="https://radicaloptimism.org/">https://radicaloptimism.org/</a></p>
-					<p><small><a href="mailto:averageradical@gmail.com">Kevin Grigorenko</a></small></p>
+					<p><small>By <a href="mailto:averageradical@gmail.com">Kevin Grigorenko</a></small></p>
 				</section>
 
 				<section>
