--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
 				<section>
 					<h1>THE END</h1>
+					<p>Presentation @ <a href="http://averageradical.github.io/radicaloptimism/#/">http://averageradical.github.io/radicaloptimism/</a></p>
 				</section>
 
 			</div>
