Add a few slides

--- a/index.html
+++ b/index.html
@@ -48,8 +48,53 @@
                                         <p><a href="https://radicaloptimism.org/">https://radicaloptimism.org/</a></p>
 					<p><small>By <a href="mailto:averageradical@gmail.com">Kevin Grigorenko</a></small></p>
 				</section>
+				
+                                <section>
+                                        <h1>Radical Optimism</h1>
+                                        <ul>
+                                          <li class="fragment">What is it?</li>
+                                          <li class="fragment">Why be optimistic?</li>
+                                          <li class="fragment">Examples</li>
+                                          <li class="fragment">Conclusion</li>
+                                        </ul>
+                                </section>
 
-				<section>
+                                <section>
+                                        <h1>What is it?</h1>
+                                        <ul>
+                                          <li class="fragment">Media, education, and popular culture promote cynicism and "realism."</li>
+                                          <li class="fragment">There are good reasons and evidence that things aren't as bad...</li>
+                                          <li class="fragment">And in <u>most</u> ways, they're getting better!</li>
+                                          <li class="fragment">Evidence includes historical and scientific data.</li>
+                                          <li class="fragment">Reason includes logic and philosophy.</li>
+                                          <li class="fragment">Website cites all claims: <a href="https://radicaloptimism.org/">https://radicaloptimism.org/</a>. Decide for yourself.</li>
+                                        </ul>
+                                </section>
+
+                                <section>
+                                        <h1>Grumps</h1>
+                                        <p>I'll refer to a cynic or "realist" as <strong>Grumps</strong>. At the end, I'll explain "realism" and why I think it's actually cynical.</p>
+                                        <p><img class="fragment" src="images/grumpy-cat-still-hates-everyone-at-south-by-southwest.jpg.png" /></p>
+                                </section>
+
+                                <section>
+                                        <h1>Optimist</h1>
+                                        <p><img class="fragment" src="images/youlldogreat.png" style="margin: 10px;" /><img class="fragment" src="images/optimistic-puppy.jpg" /></p>
+                                </section>
+
+                                <section>
+                                    <section>
+                                        <h1>Examples</h1>
+                                    </section>
+
+                                    <section>
+                                        <h1>War and Death</h1>
+                                        <img src="images/Cole_Thomas_The_Course_of_Empire_Destruction_1836.jpg" />
+                                    </section>
+
+                                </section>
+
+                                <section>
 					<h1>THE END</h1>
 					<p>Presentation @ <a href="http://averageradical.github.io/radicaloptimism/#/">http://averageradical.github.io/radicaloptimism/</a></p>
 				</section>
