--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
 
 		<div class="reveal">
 
-			<!-- Any section element inside of this container is displayed as a slide -->
-			<div class="slides">
-				<section>
-					<h1>Radical Optimism</h1>
-					<h3>Reason-based Optimism About Everything</h3>
-                                        <p><a href="https://radicaloptimism.org/">https://radicaloptimism.org/</a></p>
-					<p><small>By <a href="mailto:averageradical@gmail.com">Kevin Grigorenko</a></small></p>
-				</section>
-				
+                        <div class="slides">
+                                <section>
+                                        <h1>Radical Optimism</h1>
+                                        <h3>Reason-based Optimism About Everything</h3>
+                                        <p><a href="http://radicaloptimism.org/">http://radicaloptimism.org/</a></p>
+                                        <p><small>By <a href="mailto:averageradical@gmail.com">Kevin Grigorenko</a></small></p>
+                                        <p>TODO: http://radicaloptimism.org/wiki/First_Meetup</p>
+                                </section>
+
                                 <section>
                                         <h1>Radical Optimism</h1>
                                         <ul>
                                           <li class="fragment">What is it?</li>
                                           <li class="fragment">Why be optimistic?</li>
-                                          <li class="fragment">Examples</li>
+                                          <li class="fragment">Evidence</li>
                                           <li class="fragment">Conclusion</li>
                                         </ul>
                                 </section>
@@ -67,7 +67,7 @@
                                           <li class="fragment">And in <u>most</u> ways, they're getting better!</li>
                                           <li class="fragment">Evidence includes historical and scientific data.</li>
                                           <li class="fragment">Reason includes logic and philosophy.</li>
-                                          <li class="fragment">Website cites all claims: <a href="https://radicaloptimism.org/">https://radicaloptimism.org/</a>. Decide for yourself.</li>
+                                          <li class="fragment">Website cites all claims: <a href="http://radicaloptimism.org/">http://radicaloptimism.org/</a>. Decide for yourself.</li>
                                         </ul>
                                 </section>
 
@@ -83,20 +83,50 @@
                                 </section>
 
                                 <section>
-                                    <section>
-                                        <h1>Examples</h1>
-                                    </section>
+                                        <h1>Why be Optimistic?</h1>
+                                        <ul>
+                                          <li class="fragment">Increased happiness, decreased depression (Seligman 2005).</li>
+                                          <li class="fragment">Less likely to die of heart attack (Giltay 2004).</li>
+                                          <li class="fragment">Tend towards better moods, more persevering and successful, better physical health (Peterson 2000).</li>
+                                          <li class="fragment">Higher incomes (Diener 2002).</li>
+                                          <li class="fragment">Better relationships (Gable 2004).</li>
+                                          <li class="fragment">More creative thinking helps with group solutions (Isen 1987).</li>
+                                          <li class="fragment">Reason and Evidence support it...</li>
+                                        </ul>
+                                </section>
 
-                                    <section>
-                                        <h1>War and Death</h1>
-                                        <img src="images/Cole_Thomas_The_Course_of_Empire_Destruction_1836.jpg" />
-                                    </section>
+                                <section>
+                                        <h1>Evidence</h1>
+                                        <ul>
+                                          <li class="fragment">Health</li>
+                                          <li class="fragment">Poverty</li>
+                                          <li class="fragment">Violence</li>
+                                          <li class="fragment">Environment</li>
+                                          <li class="fragment">Education</li>
+                                          <li class="fragment">Inequality</li>
+                                          <li class="fragment">Population</li>
+                                          <li class="fragment">Psychology</li>
+                                        </ul>
+                                </section>
 
+                                <section>
+                                        <h1>Violence</h1>
+                                        <p><img src="images/Cole_Thomas_The_Course_of_Empire_Destruction_1836.jpg" /></p>
+                                        <p><small>The Course of Empire, Thomas Cole</small></p>
+                                </section>
+
+                                <section>
+                                        <h1>Violence</h1>
+                                        <img src="images/4487765_orig.jpg" />
                                 </section>
 
                                 <section>
 					<h1>THE END</h1>
-					<p>Presentation @ <a href="http://averageradical.github.io/radicaloptimism/#/">http://averageradical.github.io/radicaloptimism/</a></p>
+					<p class="fragment">You'll do great today.</p>
+                                        <p class="fragment"><img src="images/youlldogreat.png" style="margin: 10px;" /></p>
+                                        <p class="fragment">And if you don't, try to find optimistic ways to look at it.</p>
+                                        <p class="fragment"><a href="http://radicaloptimism.org/">http://radicaloptimism.org/</a></p>
+					<p class="fragment"><small>Presentation @ <a href="http://averageradical.github.io/radicaloptimism/#/">http://averageradical.github.io/radicaloptimism/</a></small></p>
 				</section>
 
 			</div>
