--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@
                                         <h1>Call to Inaction?</h1>
                                         <p class="fragment">No! Let's work to improve the world more.</p>
                                         <p class="fragment">Economic progress seems to be the main driving force.</p>
+                                        <p class="fragment">Personal exercise: Every night, write down three things that went well that day.</p>
                                 </section>
 
                                 <section>
